--- a/acnf.cbp
+++ b/acnf.cbp
@@ -7,12 +7,12 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="acnf" prefix_auto="1" extension_auto="1" />
-				<Option object_output="X:\Produce\ACNF\\.objs" />
-				<Option type="3" />
+				<Option output="libacnf" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="X:\Produce\ACNF\.objs" />
+				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-Wall" />
 					<Add option="-DBUILD_DLL" />
@@ -40,8 +40,9 @@
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="main.cpp" />
-		<Unit filename="main.h" />
+		<Unit filename="acclient.cpp" />
+		<Unit filename="acclient.h" />
+		<Unit filename="acmain.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
