Overhauled naming scheme.

--- a/src/fnet.cbp
+++ b/src/fnet.cbp
@@ -34,6 +34,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
 			<Add option="-DWIN32" />
 			<Add directory="source" />
 		</Compiler>
@@ -42,47 +43,47 @@
 			<Add library="winmm" />
 			<Add library="ws2_32" />
 		</Linker>
-		<Unit filename="source/enet/enet_callbacks.c">
+		<Unit filename="enet/enet_callbacks.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_callbacks.h" />
-		<Unit filename="source/enet/enet_compress.c">
+		<Unit filename="enet/enet_callbacks.h" />
+		<Unit filename="enet/enet_compress.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_enet.h" />
-		<Unit filename="source/enet/enet_host.c">
+		<Unit filename="enet/enet_enet.h" />
+		<Unit filename="enet/enet_host.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_list.c">
+		<Unit filename="enet/enet_list.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_list.h" />
-		<Unit filename="source/enet/enet_packet.c">
+		<Unit filename="enet/enet_list.h" />
+		<Unit filename="enet/enet_packet.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_peer.c">
+		<Unit filename="enet/enet_peer.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_protocol.c">
+		<Unit filename="enet/enet_protocol.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_protocol.h" />
-		<Unit filename="source/enet/enet_time.h" />
-		<Unit filename="source/enet/enet_types.h" />
-		<Unit filename="source/enet/enet_unix.c">
+		<Unit filename="enet/enet_protocol.h" />
+		<Unit filename="enet/enet_time.h" />
+		<Unit filename="enet/enet_types.h" />
+		<Unit filename="enet/enet_unix.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_unix.h" />
-		<Unit filename="source/enet/enet_utility.h" />
-		<Unit filename="source/enet/enet_win32.c">
+		<Unit filename="enet/enet_unix.h" />
+		<Unit filename="enet/enet_utility.h" />
+		<Unit filename="enet/enet_win32.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="source/enet/enet_win32.h" />
-		<Unit filename="source/frmr/fnet/client.cpp" />
-		<Unit filename="source/frmr/fnet/client.h" />
-		<Unit filename="source/frmr/fnet/fnet.h" />
-		<Unit filename="source/frmr/fnet/server.cpp" />
-		<Unit filename="source/frmr/fnet/server.h" />
+		<Unit filename="enet/enet_win32.h" />
+		<Unit filename="fnet.h" />
+		<Unit filename="fnetClient.cpp" />
+		<Unit filename="fnetClient.h" />
+		<Unit filename="fnetServer.cpp" />
+		<Unit filename="fnetServer.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
